# cubiquity

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
data/: archive_data.sh  create_data.py  get_data.py
docs/: building.md  voxelization.md
docs/images/: structure.drawio
src/application/: license.h  main.cpp
src/application/base/: bounds.cpp  bounds.h  hash.cpp  hash.h  logging.cpp  logging.h  materials.cpp  materials.h  metadata.cpp  metadata.h  noise.cpp  noise.h  path.cpp  paths.h  progress.cpp  progress.h  random3d.h  ray.h  serialize.cpp  serialize.h  types.h
src/application/commands/combine/: combine.cpp  combine.h
src/application/commands/export/: export.cpp  export.h  volume_vox_writer.cpp  volume_vox_writer.h
src/application/commands/export/vox_writer/: Makefile  README.md  example.cpp  vox_writer.cpp  vox_writer.h
src/application/commands/generate/: generate.cpp  generate.h
src/application/commands/import/: import.cpp  import.h
src/application/commands/test/: fractal_noise.cpp  fractal_noise.h  framework.cpp  framework.h  morton_position_enumerator.h  position_enumerator.h  position_generator.h  random_position_enumerator.cpp  test.cpp  test.h  test_base.cpp  test_base.h  test_linear_algebra.cpp  test_rendering.cpp  test_rendering.h  test_utility.cpp  test_visibility.cpp  test_visibility.h  test_volume.cpp  test_voxelisation.cpp  test_voxelisation.h
src/application/commands/view/: camera.cpp  camera.h  cube_fragment_program.glsl  demo.cpp  demo.h  gpu_pathtracing_glyph_fragment_program.glsl  gpu_pathtracing_screen_quad_fragment_program.glsl  gpu_pathtracing_viewer.cpp  gpu_pathtracing_viewer.h  instancing_demo.cpp  instancing_demo.h  opengl_viewer.cpp  opengl_viewer.h  pathtracing_demo.cpp  pathtracing_demo.h  point_vertex_program.glsl  view.cpp  view.h  viewer.cpp  viewer.h  volume_renderer.cpp  volume_renderer.h  window.cpp  window.h
src/application/commands/view/framework/: opengl_buffer.cpp  opengl_buffer.h  program.h
src/application/commands/view/glsl/: copy.frag  glyph.frag  glyph.vert  gpu_pathtracing_main_fragment_program.glsl  gpu_pathtracing_screen_quad_fragment_program.glsl  horz_blur.frag  instancing_glyph_fragment_program.glsl  instancing_glyph_vertex_program.glsl  instancing_screen_quad_fragment_program.glsl  normalise.frag  pathtracing.frag  screen_aligned_quad.vert  vert_blur.frag
src/application/commands/voxelise/: mesh.cpp  mesh.h  voxelize.cpp  voxelize.h
src/application/commands/voxelize/: voxelize.cpp  voxelize.h
src/cubiquity/: base.cpp  base.h  geometry.cpp  geometry.h  rendering.cpp  rendering.h  storage.cpp  storage.h  utility.cpp  utility.h  voxelization.cpp  voxelization.h
src/demos/instancing/: cube_vertex_program.glsl  instance_list.cpp  instance_list.h  instancing_demo.cpp  instancing_demo.h  main.cpp  point_fragment_program.glsl  volume_renderer.cpp  volume_renderer.h
src/demos/instancing/framework/: program.cpp
src/demos/pathtracing/: main.cpp
src/tests/: fractal_noise.h  framework.cpp  framework.h  linear_position_enumerator.cpp  linear_position_enumerator.h  main.cpp  morton_position_enumerator.cpp  random_position_enumerator.h  test_linear_algebra.cpp  test_linear_algebra.h  test_rendering.cpp  test_utility.h  test_visibility.cpp  test_volume.cpp  test_volume.h  test_voxelisation.cpp
src/tools/voxelize/: export.cpp  export.h  voxelize.cpp
src/utility/: camera.cpp  camera.h  demo.cpp  demo.h  mesh.cpp  mesh.h  window.cpp  window.h
utils/: make_release.sh  mingw-w64-x86_64.cmake  run_tests.sh  test_pipes.sh
